--- a/music.html
+++ b/music.html
@@ -14,8 +14,10 @@
 </head>
 <body>
   <div id="me-image">
-    <p>MUSIC</p>
-    <p>LEAVE</p>
+    <div id="text-box">
+    <marquee><h1>MUSIC MUSIC MUSIC MUSIC MUSIC MUSIC MUSIC MUSIC MUSIC MUSIC</h1></marquee>
+    <a href="index.html"><p>LEAVE</p></a>
+    </div>
   </div>
   <div id="app"></div>
   <script src="https://unpkg.com/webamp"></script>
@@ -25,27 +27,17 @@
         initialTracks: [
           {
             metaData: {
-              artist: "DJ Mike Llama",
-              title: "Llama Whippin' Intro",
+              artist: "timber",
+              title: "aurora contact (2022)",
             },
-            url: "https://cdn.jsdelivr.net/gh/captbaritone/webamp@43434d82cfe0e37286dbbe0666072dc3190a83bc/mp3/llama-2.91.mp3",
-            duration: 5.322286,
+            url: "https://raw.githubusercontent.com/bleakinlet/site-timber2025/refs/heads/main/music/aurora_contact.mp3",
           },
           {
             metaData: {
-              title: "Heroines",
-              artist: "Diablo Swing Orchestra",
+              title: "& Now Disappear into the Forgotten Works",
+              artist: "holyhauntedhead",
             },
-            url: "https://raw.githubusercontent.com/captbaritone/webamp-music/4b556fbf/Diablo_Swing_Orchestra_-_01_-_Heroines.mp3",
-            duration: 322.612245,
-          },
-          {
-            metaData: {
-              title: "We Are Going To Eclecfunk Your Ass",
-              artist: "Eclectek",
-            },
-            url: "https://raw.githubusercontent.com/captbaritone/webamp-music/4b556fbf/Eclectek_-_02_-_We_Are_Going_To_Eclecfunk_Your_Ass.mp3",
-            duration: 190.093061,
+            url: "https://raw.githubusercontent.com/bleakinlet/site-timber2025/refs/heads/main/music/holyhauntedhead-forgottenworks.mp3",
           },
         ],
       });
