--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>timber</title>
+  <title>TIMBERZONE - HOME</title>
   
   <link rel="icon" href="images/icon.png">
   <link rel="stylesheet" href="css/index.css" />
@@ -12,26 +12,27 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Monofett&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+  <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+
   <script src="//code.jquery.com/jquery.min.js"></script>
   <script>
       $.get("left-sidebar.html", function (data) {
           $("#left").replaceWith(data);
       });
 
-      $.get("right-sidebar.html", function (data) {
-          $("#right").replaceWith(data);
-      });
-
       $.get("links.html", function (data) {
           $("#links").replaceWith(data);
       });
+
   </script>
 </head>
 <body>
+  <div id="floating-me">
+    <marquee><img src="./img/floating.png"></marquee>
+  </div>
   <div id="body-container">
       <div id="left"></div>
       <div id="header">
-        <img class="no-interpolation" src="img/logo.png" height="100%">
       </div>
       <div id="links"></div>
       <div id="body">
@@ -48,7 +49,13 @@
           i draw, experiment with photography, and dabble with writing sometimes. i use this website as a portfolio and a place for random stuff. feel free to mess around and have fun! there are games, cool links, and places to explore if you get lost... enjoy the TIMBERZONE 
         </p>
       </div>
-      <div id="right"></div>
+      <div id="right">
+        <img src="img/ads/ads.png">
+        <a href=""><img class="shuffle" src="" alt=""></a>
+        <a href=""><img class="shuffle" src="" alt=""></a>
+        <a href=""><img class="shuffle" src="" alt=""></a>
+        <a href=""><img class="shuffle" src="" alt=""></a>
+      </div>
   </div>
   <div id="rantsona-box">
     <img src="./img/rantsonatext.png">
@@ -56,4 +63,5 @@
   </div>
   
 </body>
+<script src="./js/shuffle.js"></script> 
 </html>
