--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -13,12 +13,18 @@
   <img src="img/banners/banner1.gif">
   <img src="img/banners/banner2.png">
   <img src="img/banners/banner3.png">
-  <img src="img/banners/banner4.gif">
+  <a href="https://corru.observer/"><img src="img/banners/banner4.gif"></a>
   <img src="img/banners/banner6.gif">
   <img src="img/banners/banner8.gif">
   <img src="img/banners/banner9.gif">
   <img src="img/banners/banner10.gif">
   <img src="img/banners/banner11.gif">
+  <img src="img/banners/banner12.png">
+  <img src="img/banners/banner13.png">
+  <img src="img/banners/banner14.gif">
+  <img src="img/banners/banner15.png">
+  <img src="img/banners/banner16.gif">
+
 </div>
 </body>
 </html>
