--- a/links.html
+++ b/links.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <div id="links">
-  <a href="">HOME</a>
-  <a href="">WORKS</a>
-  <a href="">COMMS</a>
+  <a href="./index.html">HOME</a>
+  <a href="./works.html">WORKS</a>
+  <a href="./comms.html">COMMS</a>
   <a href="">CONTACT</a>
 </div>
 </body>
