--- a/links.html
+++ b/links.html
@@ -10,7 +10,7 @@
   <a href="./index.html">HOME</a>
   <a href="./works.html">WORKS</a>
   <a href="./comms.html">COMMS</a>
-  <a href="">CONTACT</a>
+  <a href="./contact.html">CONTACT</a>
 </div>
 </body>
 </html>
