--- a/contact.html
+++ b/contact.html
@@ -57,13 +57,22 @@
         <a href="https://bsky.app/profile/timbertoast.bsky.social" style="color: #1185FE">timbertoast</a>
       </p>
         <blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:nn4ygm5ump6sak6snpsqct7n/app.bsky.feed.post/3l66e5qfgw72k" data-bluesky-cid="bafyreif6eksrlce7rbxqqmfwz2imrh7aumlshb3mlhlgcmosvri5wyb3qu"><p lang="en">hello fwllow bluesky users</p>&mdash; timbertoast - opencomms (<a href="https://bsky.app/profile/did:plc:nn4ygm5ump6sak6snpsqct7n?ref_src=embed">@timbertoast.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:nn4ygm5ump6sak6snpsqct7n/post/3l66e5qfgw72k?ref_src=embed">October 10, 2024 at 11:16 AM</a></blockquote><script async src="https://embed.bsky.app/static/embed.js" charset="utf-8"></script>
+        <h2 style="background-color: #000000; color:white">
+          <img src="./img/github.png" style="width:35px; filter:brightness(0) invert(1); margin-left: 5px;">
+          Github
+        </h2>
+        <p>
+          I'm on github 
+          <a href="https://github.com/bleakinlet" style="color: #ffffff">here! </a>
+          This website is also open source on the site-timber2025 repo!
+        </p>
         <h2 style="background-color: #c7382F; color:white">
           <img src="./img/lastfm.png" style="width:100px; filter:brightness(0) invert(1); margin-left: 5px;">
         </h2>
         <p>
           I am over on last.fm 
           <a href="https://www.last.fm/user/Crowyo" style="color: #c7382F">here!</a>
-        </p>          
+        </p>              
         </div>
       <div id="right">
         <img src="img/ads/ads.png">
