--- a/music.html
+++ b/music.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Timbertoast - Music</title>
+  <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,7 +13,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Monofett&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-  <title>TIMBERZONE - MUSIC</title>
+
+  <meta content="Timbertoast - Music" property="og:title" />
+  <meta content="Timbertoast's music page" property="og:description" />
+  <meta content="https://timbertoast.neocities.org/" property="og:url" />
+  <meta content="./img/icon.png"
+      property="og:image" />
+  <meta content="#FEB73B" data-react-helmet="true" name="theme-color" />
+
 </head>
 <body>
   <div id="me-image">
@@ -27,17 +37,38 @@
         initialTracks: [
           {
             metaData: {
-              artist: "timber",
-              title: "aurora contact (2022)",
+              artist: "Adios Adios",
+              title: "Pretty Bear",
             },
-            url: "https://raw.githubusercontent.com/bleakinlet/site-timber2025/refs/heads/main/music/aurora_contact.mp3",
+            url: "https://timbertoast.org/music/pretty_bear.mp3",
           },
           {
             metaData: {
-              title: "& Now Disappear into the Forgotten Works",
-              artist: "holyhauntedhead",
+              title: "Orange Moon",
+              artist: "Pudding Club",
             },
-            url: "https://raw.githubusercontent.com/bleakinlet/site-timber2025/refs/heads/main/music/holyhauntedhead-forgottenworks.mp3",
+            url: "https://timbertoast.org/music/orange_moon.mp3",
+          },
+          {
+            metaData: {
+              title: "Hourglass",
+              artist: "Hurray for the Riff Raff",
+            },
+            url: "https://timbertoast.org/music/hourglass.mp3",
+          },
+          {
+            metaData: {
+              title: "Never Fall in Love with U",
+              artist: "Nelward",
+            },
+            url: "https://timbertoast.org/music/never_fall_in_love_with_u.mp3",
+          },
+          {
+            metaData: {
+              title: "Swell",
+              artist: "Pallow",
+            },
+            url: "https://timbertoast.org/music/swell.mp3",
           },
         ],
       });
