--- a/skarNET/console.html
+++ b/skarNET/console.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/console.css">
-    <title>THE CONSOLE??!??!?!?!??!???!?!?!?</title>
+    <title>console</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
