main page update

--- a/gallery.html
+++ b/gallery.html
@@ -23,12 +23,37 @@
   <div id="body-container">
     <div id="left-body">
       <img src="/img/logodark.png">
-      <p>last updated: 1/22/2025</p>
+      <p>last updated: 3/30/2025</p>
       <a href="./works.html">Back</a>
     </div>
     <div id="right-body">
       <div id="gallery">
+        <!--COLUMN ONE-->
         <div class="gallery-column">
+
+          <div class="image-block">
+            <a href="./img/gallery/sunset.png">
+            <img src="img/gallery/sunset-thumb.jpg">
+            <h1>Sunset</h1>
+            <p>1/31/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/looking.png">
+            <img src="img/gallery/looking-thumb.jpg">
+            <h1>Looking</h1>
+            <p>3/14/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/redandwhite.png">
+            <img src="img/gallery/redandwhite-thumb.jpg">
+            <h1>Red and White</h1>
+            <p>1/16/2025</p>
+            </a>
+          </div>
 
           <div class="image-block">
             <a href="./img/gallery/tried.jpg">
@@ -53,9 +78,35 @@
             <p>1/7/2025</p>
             </a>
           </div>
-
         </div>
+
+        <!--COLUMN TWO-->
         <div class="gallery-column">
+
+          <div class="image-block">
+            <a href="./img/gallery/film.png">
+            <img src="img/gallery/film-thumb.jpg">
+            <h1>Film</h1>
+            <p>3/30/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/dead-air.png">
+            <img src="img/gallery/dead-air-thumb.jpg">
+            <h1>Dead Air</h1>
+            <p>2/19/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/gator.png">
+            <img src="img/gallery/gator-thumb.jpg">
+            <h1>Gator Comm</h1>
+            <p>1/21/2025</p>
+            </a>
+          </div>
+
           <div class="image-block">
             <a href="./img/gallery/arini.jpg">
             <img src="img/gallery/arini-thumb.jpg">
@@ -79,9 +130,19 @@
             <p>12/31/2024</p>
             </a>
           </div>
-
         </div>
+
+        <!--COLUMN THREE-->
         <div class="gallery-column">
+
+          <div class="image-block">
+            <a href="./img/gallery/stars.png">
+            <img src="img/gallery/stars-thumb.jpg">
+            <h1>Stars</h1>
+            <p>3/2/2025</p>
+            </a>
+          </div>
+
           <div class="image-block">
             <a href="./img/gallery/samroof.jpg">
             <img src="img/gallery/samroof-thumb.jpg">
