--- a/index.html
+++ b/index.html
@@ -45,19 +45,33 @@
       </div>
       <div id="links"></div>
       <div id="body">
-        <h1>
-          welcome to the timberzone
-        </h1>
-        <p>
-          hello, my name is timber: i use he/they pronouns and live in a DESERT in the lovely UNITED STATES OF AMERICA
-        </p>
-        <h2>
-          funny website
-        </h2>
-        <p>
-          i draw, experiment with photography, and dabble with writing sometimes. i use this website as a portfolio and a place for random stuff. feel free to mess around and have fun! there are games, cool links, and places to explore if you get lost... enjoy the TIMBERZONE 
-        </p>
-
+        <div class="body-separator">
+          <div id="body-left">
+            <div id="card-header"><img src="./img/card-logo.gif"></div>
+            <div id="card-icon"><img src="./img/seemeagain.jpg"></div>
+            <div id="card-body">
+                <span style="font-size: 30px">hello!</span> 
+                <br>my name is timber, and online internet dragon guy that partakes in <b>art</b> and <b>music</b>. 
+                <br>this is my website!
+            </div>
+          </div>
+          <div id="body-right">
+            <h1>the timberzone</h1>
+            <p>This website contains a lot of the work I do, below are some useful links to get places that I like to update regularly!</p>
+            <h2>Links</h2>
+            <div class="linkbox">
+              <img src="./img/icon-musiclog.png">
+              <p><a href="./listeningloghome.html">Music Listening Logs</a></p>
+              <img src="./img/icon-musiclog.png">
+            </div>
+            <div class="linkbox">
+              <img src="./img/icon-art.png">
+              <p><a href="./gallery.html">Art Gallery</a></p>
+              <img src="./img/icon-art.png">
+            </div>
+            <p><br>This website is made by just me with technical help from others, there might be issues, lemme know if you find any!</p>
+          </div>
+        </div>
         <div id="lights">
           <img src="./img/lights.png">
         </div>
