--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div id="card-icon"><img src="./img/seemeagain.jpg"></div>
             <div id="card-body">
                 <span style="font-size: 30px">hello!</span> 
-                <br>my name is timber, and online internet dragon guy that partakes in <b>art</b> and <b>music</b>. 
+                <br>my name is timber, an online internet dragon guy that partakes in <b>art</b> and <b>music</b>. 
                 <br>this is my website!
             </div>
           </div>
@@ -61,7 +61,7 @@
             <h2>Links</h2>
             <div class="linkbox">
               <img src="./img/icon-musiclog.png">
-              <p><a href="./listeningloghome.html">Music Listening Logs</a></p>
+              <p><a href="./musiclogs/listeningloghome.html">Music Listening Logs</a></p>
               <img src="./img/icon-musiclog.png">
             </div>
             <div class="linkbox">
