--- a/musiclogs/listeningloghome.html
+++ b/musiclogs/listeningloghome.html
@@ -21,6 +21,8 @@
     <meta content="#FEB73B" data-react-helmet="true" name="theme-color" />
   </head>
   <body>
+    <div id="go-back"><a href="../index.html">GO BACK</a></div>
+
     <div id="body-container">
       <div id="intro">
         <div>
@@ -36,7 +38,7 @@
         <p><a href="../musiclogs/2025.html">2025</a></p>
         <h1>OTHER</h1>
         <p><a href="../musiclogs/spotlights.html">SPOTLIGHTS</a></p>
-        <p><a href="../img/musiclog/images/favoritealbums.png">FAVORITE ALBUMS</a></p>
+        <p><a href="../img/musiclog/images/favoritealbums.jpg">FAVORITE ALBUMS</a></p>
       </div>
     </div>
   </body>
