--- a/works.html
+++ b/works.html
@@ -65,10 +65,24 @@
           <p>Click the images to be brought to their page!</p>
           <div class="game-box">
             <div class="game-image">
+              <a href="./games/drizzledude.html"><img src="./img/dude.png"></a>
+            </div>
+            <div class="game-title" style="background-color: rgb(114, 214, 78); color:rgb(22, 55, 29)">
+              <strong>Drizzle Dude</strong>
+            </div>
+            <div class="game-subtitle" style="color:rgb(108, 172, 56)">
+              <p><strong>RELEASED:</strong> AUGUST 2025</p>
+              <p><strong>PLATFORM:</strong> PICOTRON</p>
+              <i>A micro-"game" about taking care of a goblin. Keep his enrichment up by tossing him around and keep him fed!</i>
+            </div>
+          </div>
+        
+          <div class="game-box">
+            <div class="game-image">
               <a href="https://timbertoast.itch.io/solar-highway"><img src="./img/sh.png"></a>
             </div>
             <div class="game-title" style="background-color: rgb(88, 26, 26); color:rgb(255, 73, 73)">
-              <strong>SOLAR HIGHWAY</strong>
+              <strong>Solar Highway</strong>
             </div>
             <div class="game-subtitle" style="color:rgb(255, 101, 90)">
               <p><strong>RELEASED:</strong> APRIL 2022 | itch.io</p>
@@ -88,6 +102,19 @@
               <p><strong>RELEASED:</strong> MARCH 2022 | itch.io</p>
               <p><strong>PLATFORM:</strong> PICO-8</p>
               <i>A text based game about riding a bike to the top of the mountain, cooking meals and dealing with bears along the way.</i>
+            </div>
+          </div>
+
+          <div class="game-box">
+            <div class="game-image">
+              <a href="/firebreak/firebreak-randomizer.html"><img src="/firebreak/img/logo.png"></a>
+            </div>
+            <div class="game-title" style="background-color: #FFB200">
+              <strong>FBC: Firebreak Randomizer</strong>
+            </div>
+            <div class="game-subtitle" style="color: rgb(255, 184, 41)">
+              <p><strong>VERSION:</strong> 1.0</p>
+              <i>A web tool used for randomly selecting loadouts for FBC: Firebreak! Shuffle perks, weapons, kits, and grenades!</i>
             </div>
           </div>
           <div id="transmission" style="display: flex; justify-content: center;">
