--- a/comms.html
+++ b/comms.html
@@ -80,11 +80,11 @@
                 This painting style is the one I like doing the most. It includes a fullbody character and background in color! Feel free to suggest background and pose ideas, or just let me go wild with it!!!
             </p>
             <div id="art-box">
-                <img src="./img/gallery/me-thumb.jpg">
-                <img src="./img/gallery/vee-thumb.jpg">
-                <img src="./img/gallery/sona-thumb.jpg">
+                <img src="./img/gallery/music-thumb.jpg">
+                <img src="./img/gallery/flow-thumb.jpg">
+                <img src="./img/gallery/truck-thumb.jpg">
                 <img src="./img/gallery/samroof-thumb.jpg">
-                <img src="./img/gallery/yellowstone-thumb.jpg">
+                <img src="./img/gallery/vee-thumb.jpg">
               </div>
       </div>
       <div id="right">
