--- a/firebreak/firebreak-randomizer.html
+++ b/firebreak/firebreak-randomizer.html
@@ -20,7 +20,7 @@
   <body>
     <div id="page-container">
       <div id="title-container">
-        FBC: Firebreak Randomizer
+        <img src="./img/titlelogo.PNG">
       </div>
       <div id="body-container">
         <div id="randomize-button">
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div id="disclaimer-container">
-        <p>Website Version 1.0 for Firebreak Version 1.4</p>
+        <p>Website Version <span>1.01</span> for Firebreak Version <span>1.4</span></p>
         <p>This page is an unofficial community website and is not affiliated with Remedy Entertainment.</p>
       </div>
     </div>
