--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
           </div>
           <div id="body-right">
             <h1>the timberzone</h1>
-            <p>This website contains a lot of the work I do, below are some useful links to get places that I like to update regularly!</p>
-            <h2>Links</h2>
+            <p>Welcome to my site!! This site contains my portfolio, and commission and contact information!</p>
+            <h2>quick info</h2>
+            <p>This website is made by just me with technical help from others, there might be issues, let me know if you find any! I hope you enjoy your time and find a lot of fun things to do here!<br><br>Contact me if you want to add your banner to my site!</p>
+            <h2>important links</h2>
             <div class="linkbox">
               <img src="./img/icon-musiclog.png">
               <p><a href="./musiclogs/listeningloghome.html">Music Listening Logs</a></p>
@@ -69,7 +71,6 @@
               <p><a href="./gallery.html">Art Gallery</a></p>
               <img src="./img/icon-art.png">
             </div>
-            <p><br>This website is made by just me with technical help from others, there might be issues, lemme know if you find any!</p>
           </div>
         </div>
         <div id="lights">
