--- a/works.html
+++ b/works.html
@@ -52,11 +52,11 @@
             All my art is done on a 6th generation iPad using Procreate. Click the header to be brought to my gallery!
           </p>
           <div id="art-box">
-            <img src="./img/gallery/me-thumb.jpg">
-            <img src="./img/gallery/vee-thumb.jpg">
-            <img src="./img/gallery/sona-thumb.jpg">
+            <img src="./img/gallery/music-thumb.jpg">
+            <img src="./img/gallery/flow-thumb.jpg">
+            <img src="./img/gallery/truck-thumb.jpg">
             <img src="./img/gallery/samroof-thumb.jpg">
-            <img src="./img/gallery/yellowstone-thumb.jpg">
+            <img src="./img/gallery/vee-thumb.jpg">
           </div>
 
           <h2>
