--- a/gallery.html
+++ b/gallery.html
@@ -23,13 +23,29 @@
   <div id="body-container">
     <div id="left-body">
       <img src="/img/logodark.png">
-      <p>last updated: 3/30/2025</p>
+      <p>last updated: 8/6/2025</p>
       <a href="./works.html">Back</a>
     </div>
     <div id="right-body">
       <div id="gallery">
         <!--COLUMN ONE-->
         <div class="gallery-column">
+
+          <div class="image-block">
+            <a href="./img/gallery/monsoon.jpg">
+            <img src="img/gallery/monsoon-thumb.jpg">
+            <h1>Monsoon</h1>
+            <p>7/7/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/data.png">
+            <img src="img/gallery/data-thumb.jpg">
+            <h1>Data</h1>
+            <p>5/6/2025</p>
+            </a>
+          </div>
 
           <div class="image-block">
             <a href="./img/gallery/sunset.png">
@@ -82,6 +98,30 @@
 
         <!--COLUMN TWO-->
         <div class="gallery-column">
+          
+          <div class="image-block">
+            <a href="./img/gallery/signal.jpg">
+            <img src="img/gallery/signal-thumb.jpg">
+            <h1>Signal</h1>
+            <p>8/6/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/guitar.jpg">
+            <img src="img/gallery/guitar-thumb.jpg">
+            <h1>Guitar</h1>
+            <p>7/1/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/flow.jpg">
+            <img src="img/gallery/flow-thumb.jpg">
+            <h1>Flow</h1>
+            <p>7/1/2025</p>
+            </a>
+          </div>
 
           <div class="image-block">
             <a href="./img/gallery/film.png">
@@ -134,6 +174,46 @@
 
         <!--COLUMN THREE-->
         <div class="gallery-column">
+
+          <div class="image-block">
+            <a href="./img/gallery/music.jpg">
+            <img src="img/gallery/music-thumb.jpg">
+            <h1>Music</h1>
+            <p>7/1/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/encounter.jpg">
+            <img src="img/gallery/encounter-thumb.jpg">
+            <h1>Encounter</h1>
+            <p>7/1/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/rest.jpg">
+            <img src="img/gallery/rest-thumb.jpg">
+            <h1>Rest</h1>
+            <p>7/1/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/american-dirt.jpg">
+            <img src="img/gallery/american-dirt-thumb.jpg">
+            <h1>American Dirt</h1>
+            <p>6/29/2025</p>
+            </a>
+          </div>
+
+          <div class="image-block">
+            <a href="./img/gallery/truck.png">
+            <img src="img/gallery/truck-thumb.jpg">
+            <h1>Truck</h1>
+            <p>5/25/2025</p>
+            </a>
+          </div>
 
           <div class="image-block">
             <a href="./img/gallery/stars.png">
