--- a/musiclogs/2025.html
+++ b/musiclogs/2025.html
@@ -23,12 +23,28 @@
   <body>
     <div id="go-back"><a href="./listeningloghome.html">GO BACK</a></div>
 
+    <div class="music-block">
+      <div class="info-block">
+        <div class="album-image"><img src="../img/musiclog/albumart/dansboogie.jpg"></div>
+        <div class="album-name"><b>Dan's Boogie</b></div>
+        <div class="artist-name">by Destroyer</div>
+        <div class="release-date">March 28th, 2025</div>
+        <div class="link"><a href="https://destroyer.bandcamp.com/album/dans-boogie">Link</a></div>
+      </div>
+      <div class="description-box">
+        <div class="description">
+          <div class="tags"><span style="color: yellow">tags:</span> alternative, free-flowing, wandering</div>
+          <p><br><i>"It's all the same thing under a certain light"</i><br><br>Listening to music while staring longingly through car windows is the best part of my life. I spend a lot of my life moving, and this record shows how change is reflective of our experiences. It is hard to stay where you are, it is hard to do the same thing every single day. Bejar takes a lot of synthy notes strung with ripping guitars and slams some poetry in your face over and over again, and I really, really like it.<br><br>It's an album that makes me want to hydroplane, or at least, take my hands off the wheel and look up again. I don't do that anymore.</p>
+        </div>
+      </div>
+    </div>
+
       <div class="music-block">
         <div class="info-block">
           <div class="album-image"><img src="../img/musiclog/albumart/austria2.jpg"></div>
           <div class="album-name"><b>Austria 2</b></div>
           <div class="artist-name">by Mondo</div>
-          <div class="release-date">January 31, 2025</div>
+          <div class="release-date">January 31st, 2025</div>
           <div class="link"><a href="https://monda-nj.bandcamp.com/album/austria-2">Link</a></div>
         </div>
         <div class="description-box">
